fixed redirecting bug

--- a/conquez/authen/templates/authen/home.html
+++ b/conquez/authen/templates/authen/home.html
@@ -22,7 +22,7 @@
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="{% url 'aboutus' %}">About Us</a></li>
             <li><a href="{% url 'howtoplay' %}">How To Play</a></li>
-            <li><a href="{% url 'howtoplay' %}">Logout</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
         </ul>
     </nav>
         
