--- a/conquez/authen/templates/authen/howtoplay.html
+++ b/conquez/authen/templates/authen/howtoplay.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-md-8 col-md-offset-2 col-sm-12">
                                 <div class="head_title text-center">
-                                    <h2>Steps</h2>
+                                    <h2 id="steps">Steps</h1>
                                 </div>
                             </div>
 
