connected server500 error page

--- a/conquez/authen/templates/authen/500.html
+++ b/conquez/authen/templates/authen/500.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>500 Error</title>
 </head>
 <body>
-    <h1>500</h1>
+    <h1>Oh no! It's a 500!</h1>
 </body>
 </html>
