--- a/conquez/country/templates/base.html
+++ b/conquez/country/templates/base.html
@@ -41,7 +41,7 @@
 
           <span class="card__price card__will-animate" ></span>
 
-          <h1  id="heading1" class="card__title card__will-animate">Pollution</h1>
+          <h1  id="heading1" class="card__title card__will-animate">General</h1>
           <span class="card__subtitle card__will-animate">{{ question.question }}</span>
 
         </div>
