--- a/conquez/authen/templates/authen/404.html
+++ b/conquez/authen/templates/authen/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404</title>
+    <title>404 Error</title>
 </head>
 <body>
-    <h1>404</h1>
+    <h1>Oh no! It's a 404!</h1>
 </body>
 </html>
