--- a/design/Bisht/canada/css/style.css
+++ b/design/Bisht/canada/css/style.css
@@ -30,35 +30,10 @@ body {
   width: 100%;
   height: 100%;
 }
-#answerContainer1{
-  position: relative;
-  margin: 30px;
-  width: 250px;
-  background-color: lightgreen;
-  height: 250px;
+#question-1{
+  width: 300px;
+  height: 300px;
 }
-#answerContainer2{
-  position: relative;
-  margin: 30px;
-  width: 250px;
-  background-color: lightgreen;
-  height: 250px;
-}
-#answerContainer3{
-  position: relative;
-  margin: 30px;
-  width: 250px;
-  background-color: lightgreen;
-  height: 250px;
-}
-#answerContainer4{
-  position: relative;
-  margin: 30px;
-  width: 250px;
-  background-color: lightgreen;
-  height: 250px;
-}
-
 .card {
   display: block;
   position: absolute;
