--- a/conquez/authen/templates/authen/404.html
+++ b/conquez/authen/templates/authen/404.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>404</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'authen/css/error404.css' %">
 </head>
 <body>
-    <h1>404</h1>
+<div>
+    <img src="{% static 'authen/images/404img.png' %}" alt="404-error">
+    <p id="headline"><b>Oops!!</b></p>
+    <p id="context">Looks like the empire you were looking
+        for does not exist.
+    </p>
+    <p id="sorry"><b>Sorry :(</b></p>
+
+    <p id="btn"><a href="{% url 'home' %}">Return Home</a></p>
+</div>
 </body>
 </html>
