--- a/conquez/country/templates/base.html
+++ b/conquez/country/templates/base.html
@@ -7,7 +7,7 @@
     {% endblock %}
     {% block css%}
     {% endblock %}
-    <meta name="viewport" content="width=device-width, initial-scale=1 s">
+    <meta name="viewport" content="width=device-width, initial-scale=0.775">
   </head>
   <body>
 
@@ -19,7 +19,6 @@
             <li><a href="{% url 'howtoplay' %}">How To Play</a></li>
           </ul>
         </nav>
-
         <div class="cd-overlay-nav">
           <span></span>
         </div>
