base_[quiz changed

--- a/conquez/country/templates/base.html
+++ b/conquez/country/templates/base.html
@@ -44,22 +44,18 @@
           <div class="card__watermark" data-watermark="Q1"></div>
           <div class="card__logo card__will-animate"></div>
           <span class="card__price card__will-animate" ></span>
-<<<<<<< HEAD
           <h1  id="heading1" class="card__title card__will-animate">General</h1>
-=======
 
-          <h1  id="heading1" class="card__title card__will-animate">Pollution</h1>
->>>>>>> 2c82fe5e9970f6e791ded64bf59034711b038a9f
           <span class="card__subtitle card__will-animate">{{ question.question }}</span>
         </div>
 
         <div class="card__body" id="first_card_body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons1">
-            <div><button class="choices" id="1A">{{ question.choice1}}</button></div>
-            <div><button class="choices" id="1B">{{ question.choice2 }}</button></div>
-            <div><button class="choices" id="1C">{{ question.choice3 }}</button></div>
-            <div><button class="choices" id="1D">{{ question.choice4 }}</button></div>
+            <div><button class="choices" id="1A" onclick="validator(checkAnswer('A', 1), 1)">{{ question.choice1}}</button></div>
+            <div><button class="choices" id="1B" onclick="validator(checkAnswer('B', 1), 1)">{{ question.choice2 }}</button></div>
+            <div><button class="choices" id="1C" onclick="validator(checkAnswer('C', 1), 1)">{{ question.choice3 }}</button></div>
+            <div><button class="choices" id="1D" onclick="validator(checkAnswer('D', 1), 1)">{{ question.choice4 }}</button></div>
           </div>
           <span class="card__category card__will-animate"></span>
         </div>
@@ -82,10 +78,10 @@
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons2">
-            <div><button class="choices" id="2A">{{ question.choice1 }}</button></div>
-            <div><button class="choices" id="2B">{{ question.choice2 }}</button></div>
-            <div><button class="choices" id="2C">{{ question.choice3 }}</button></div>
-            <div><button class="choices" id="2D">{{ question.choice4 }}</button></div>
+            <div><button class="choices" id="2A" onclick="validator(checkAnswer('A', 2), 2)">{{ question.choice1 }}</button></div>
+            <div><button class="choices" id="2B" onclick="validator(checkAnswer('B', 2), 2)">{{ question.choice2 }}</button></div>
+            <div><button class="choices" id="2C" onclick="validator(checkAnswer('C', 2), 2)">{{ question.choice3 }}</button></div>
+            <div><button class="choices" id="2D" onclick="validator(checkAnswer('D', 2), 2)">{{ question.choice4 }}</button></div>
           </div>
           <span class="card__category card__will-animate"></span>
         </div>
@@ -108,10 +104,10 @@
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons3">
-            <div><button class="choices" id="3A">{{ question.choice1 }}</button></div>
-            <div><button class="choices" id="3B">{{ question.choice2 }}</button></div>
-            <div><button class="choices" id="3C">{{ question.choice3 }}</button></div>
-            <div><button class="choices" id="3D">{{ question.choice4 }}</button></div>
+            <div><button class="choices" id="3A" onclick="validator(checkAnswer('A', 3), 3)">{{ question.choice1 }}</button></div>
+            <div><button class="choices" id="3B" onclick="validator(checkAnswer('B', 3), 3)">{{ question.choice2 }}</button></div>
+            <div><button class="choices" id="3C" onclick="validator(checkAnswer('C', 3), 3)">{{ question.choice3 }}</button></div>
+            <div><button class="choices" id="3D" onclick="validator(checkAnswer('D', 3), 3)">{{ question.choice4 }}</button></div>
           </div>
           <span class="card__category card__will-animate"></span>
         </div>
@@ -134,10 +130,10 @@
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons4">
-            <div><button class="choices" id="4A">{{ question.choice1 }}</button></div>
-            <div><button class="choices" id="4B">{{ question.choice2 }}</button></div>
-            <div><button class="choices" id="4C">{{ question.choice3 }}</button></div>
-            <div><button class="choices" id="4D">{{ question.choice4 }}</button></div>
+            <div><button class="choices" id="4A" onclick="validator(checkAnswer('A', 4), 4)">{{ question.choice1 }}</button></div>
+            <div><button class="choices" id="4B" onclick="validator(checkAnswer('B', 4), 4)">{{ question.choice2 }}</button></div>
+            <div><button class="choices" id="4C" onclick="validator(checkAnswer('C', 4), 4)">{{ question.choice3 }}</button></div>
+            <div><button class="choices" id="4D" onclick="validator(checkAnswer('D', 4), 4)">{{ question.choice4 }}</button></div>
           </div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="checkscore_button">
           </div>
