--- a/conquez/country/templates/base.html
+++ b/conquez/country/templates/base.html
@@ -10,6 +10,7 @@
     {% block css%}
     {% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=0.82">
+      <link rel="icon" type="image/png" href="../../authen/static/authen/images/globe.png">
   </head>
   <body>
 
