--- a/conquez/authen/templates/authen/howtoplay.html
+++ b/conquez/authen/templates/authen/howtoplay.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
@@ -39,7 +39,7 @@
                 <li><a href="{% url 'home' %}">Globe</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'aboutus' %}">About Us</a></li>
-                <li><a href="{% url 'socialauth_disconnect' 'logout' %}">Logout</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </nav>
                     
