--- a/conquez/country/templates/china/china.html
+++ b/conquez/country/templates/china/china.html
@@ -15,7 +15,7 @@
 {% endblock %}
 {% block javascript %}
 <script src="{% static 'main/js/base_index.js' %}"></script>
-<script src="{% static 'main/js/base_quiz.js' %}"></script>
+<script src="{% static 'china/js/china_quiz.js' %}"></script>
 
 <script src="{% static 'burger/js/velocity.min.js' %}"></script>
 <script src="{% static 'burger/js/main.js' %}"></script>
