--- a/conquez/authen/templates/authen/aboutus.html
+++ b/conquez/authen/templates/authen/aboutus.html
@@ -96,7 +96,13 @@
                                     <h2>Story</h2>
                                 </div>
                                 <div class="head_title text-center">
-                                    <h3>Story Here</h3>
+                                    <h3>Conquez was formed by a group of five quiz-loving CST students who hail from different countries, cultures, and backgrounds around the globe. They noticed that current quiz sites lacks environmental quizzes, and that those do have those quizzes only covered general worldwide issues.
+
+                                        <br><br>They decided that the best way to fix that gap was to create our own quizzes covering such topics (rather than twiddle their thumbs for someone to do it for them), and that was how the idea for Conquez was born. .
+                                        
+                                        <br><br>They researched the questions and checked the sources, designed the interface and built it up from the ground, and created the framework that would form the game - all from their beat-up laptops used to run their necessary programs at school.
+                                        
+                                        <br><br>Their mission when they wrote Conquez is to create entertainment through education on global issues. And that’s still their biggest mission today.</h3>
                                 </div>
                             </div>
                         </div>
@@ -116,11 +122,11 @@
                                         <h2>The Team</h2>
                                     </div>
                                     <div class="swiper-wrapper">
-                                        <div class="swiper-slide" style="background-image:url(../static/authen/images/kenprofile.png)"></div>
-                                        <div class="swiper-slide" style="background-image:url(../static/authen/images/drag3.png)"></div>
-                                        <div class="swiper-slide" style="background-image:url(../static/authen/images/drag2.png)"></div>
-                                        <div class="swiper-slide" style="background-image:url(../static/authen/images/drag1.png)"></div>
-                                        <div class="swiper-slide" style="background-image:url(../static/authen/images/drag3.png)"></div>
+                                        <img class="swiper-slide" src="{% static 'authen/images/kenprofile1.png' %}">
+                                        <img class="swiper-slide" src="{% static 'authen/images/leahprofile.png' %}">
+                                        <img class="swiper-slide" src="{% static 'authen/images/bisht1profile.png' %}">
+                                        <img class="swiper-slide" src="{% static 'authen/images/dhruvprofile.png' %}">
+                                        <img class="swiper-slide" src="{% static 'authen/images/michelleprofile.png' %}">
                                     </div>
                                     <!-- Swipe the card left and right -->
                                     <div class="swiper-button-prev"></div>
