--- a/conquez/country/templates/turkey/turkey.html
+++ b/conquez/country/templates/turkey/turkey.html
@@ -7,7 +7,6 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap');
 </style>
-
 <link rel="stylesheet" href="{% static 'main/css/base_style.css' %}">
 <link rel="stylesheet" href="{% static 'turkey/css/style.css' %}">
 
@@ -16,7 +15,7 @@
 {% endblock %}
 {% block javascript %}
 <script src="{% static 'main/js/base_index.js' %}"></script>
-<script src="{% static 'main/js/base_quiz.js' %}"></script>
+<script src="{% static 'turkey/js/turkey_quiz.js' %}"></script>
 
 <script src="{% static 'burger/js/velocity.min.js' %}"></script>
 <script src="{% static 'burger/js/main.js' %}"></script>
