antarctica page modified

--- a/conquez/country/templates/antarctica/antarctica.html
+++ b/conquez/country/templates/antarctica/antarctica.html
@@ -8,14 +8,11 @@
     <title>Antarctica</title>
 </head>
 <body>
-    <div>
-        <h1>TOO CLEAN TO CONQUER!! RETREAT!!</h1>
-    </div>
-    <div>
-        <img src="{% static 'antarctica/images/penguins.jpg' %}" alt="">
-    </div>
-    <div>
-        <a href="{% url 'home' %}">Go Back</a>
-    </div>
+<div>
+    <img src="{% static 'antarctica/images/Mask Group.png' %}" alt="penguin">
+    <p id="headline"><b>Too clean to conquer retreat</b></p>
+    <p id="btn"><a href="{% url 'home' %}">Return Home</a></p>
+</div>
+
 </body>
 </html>
