--- a/conquez/country/templates/turkey/turkey.html
+++ b/conquez/country/templates/turkey/turkey.html
@@ -17,19 +17,19 @@
 {% endblock %}
 
 {% block headline1 %}
-<h1  id="heading1" class="card__title card__will-animate">General</h1>
+<h1  id="heading1" class="card__title card__will-animate">Question1</h1>
 {% endblock %}
 
 {% block headline2 %}
-<h1 id="heading2" class="card__title card__will-animate">The Three R's</h1>
+<h1 id="heading2" class="card__title card__will-animate">Question2</h1>
 {% endblock %}
 
 {% block headline3 %}
-<h1 class="card__title card__will-animate" id="heading3">Resources & Waste</h1>
+<h1 class="card__title card__will-animate" id="heading3">Question3</h1>
 {% endblock %}
 
 {% block headline4 %}
-<h1 class="card__title card__will-animate" id="heading4">Ecosystem</h1>
+<h1 class="card__title card__will-animate" id="heading4">Question4</h1>
 {% endblock %}
 
 {% block javascript %}
