--- a/conquez/country/templates/canada/canada.html
+++ b/conquez/country/templates/canada/canada.html
@@ -24,17 +24,17 @@
 {% endblock %}
 
 {% block headline1 %}
-<h1  id="heading1" class="card__title card__will-animate">Questin1</h1>
+<h1  id="heading1" class="card__title card__will-animate">Problems</h1>
 {% endblock %}
 
 {% block headline2 %}
-<h1 id="heading2" class="card__title card__will-animate">Question2</h1>
+<h1 id="heading2" class="card__title card__will-animate">Why?</h1>
 {% endblock %}
 
 {% block headline3 %}
-<h1 class="card__title card__will-animate" id="heading3">Question3</h1>
+<h1 class="card__title card__will-animate" id="heading3">Plastic</h1>
 {% endblock %}
 
 {% block headline4 %}
-<h1 class="card__title card__will-animate" id="heading4">Question4</h1>
+<h1 class="card__title card__will-animate" id="heading4">Plastic Waste</h1>
 {% endblock %}
